# opengl-demo

./: .gitignore  CMakeLists.txt  OpenGLDemoConfig.h.in
src/: CMakeLists.txt  glad.c
